# shrtlnk

./: LICENSE  README.md
.github/workflows/: rust.yml
shrtlnk/: .dockerignore  Cargo.toml  Dockerfile  config.toml.example
shrtlnk/src/: app.rs  config.rs  main.rs
