[package]
name = "shrtlnk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["sync", "rt", "rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11"
toml = "0.5.8"
anyhow = "1.0.44"
regex = "1.5"
hyper = { version = "0.14", features = ["client", "server", "http1", "http2", "stream"] }

[dev-dependencies]
reqwest = "0.11.5"